--- a/Detecting Covid-19 with chest X-Ray using Py-Torch.ipynb
+++ b/Detecting Covid-19 with chest X-Ray using Py-Torch.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "##### Image  classification of Chest X Rays in one of three classes: Normal, Viral Pneumonia, Covid-19\n",
     "\n",
-    "##### Dataset from https://www.kaggle.com/tawsifurrahman/covid19-radiography-database on Kaggle"
+    "##### Dataset from [Covid-19 Radiography Dataset](https://www.kaggle.com/tawsifurrahman/covid19-radiography-database) on Kaggle"
    ]
   },
   {
